// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ng-update thumbnail-card monoHandler (#13869) removes bound [monoHandler] and adds a TODO: test.html 1`] = `
{
  "0. Before": "
                <tui-thumbnail-card
                    [monoHandler]="monoHandler"
                    [paymentSystem]="system"
                />
            ",
  "1. After": "
                <!-- TODO: (Taiga UI migration) \`monoHandler\` was removed from <tui-thumbnail-card> in v5. The payment-system logo now renders from a configured icon map — provide your own mono or colored icons via the \`icons\` field of TUI_THUMBNAIL_CARD_OPTIONS instead. See https://taiga-ui.dev/components/thumbnail-card -->
<tui-thumbnail-card
                   
                    [paymentSystem]="system"
                />
            ",
}
`;

exports[`ng-update thumbnail-card monoHandler (#13869) removes static monoHandler and adds a TODO: test.html 1`] = `
{
  "0. Before": "
                <tui-thumbnail-card
                    monoHandler
                    [paymentSystem]="system"
                />
            ",
  "1. After": "
                <!-- TODO: (Taiga UI migration) \`monoHandler\` was removed from <tui-thumbnail-card> in v5. The payment-system logo now renders from a configured icon map — provide your own mono or colored icons via the \`icons\` field of TUI_THUMBNAIL_CARD_OPTIONS instead. See https://taiga-ui.dev/components/thumbnail-card -->
<tui-thumbnail-card
                   
                    [paymentSystem]="system"
                />
            ",
}
`;
